Deploy: Full-stack scriptwriter application with React frontend and Express backend

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Environment variables (contains sensitive data)
+.env
+.env.local
+.env.production
+client/.env
+server/.env
