--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "rest-express",
+  "homepage": "https://mat-coder.github.io/jabilamma/",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "start": "NODE_ENV=production node dist/index.js",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
@@ -11,6 +14,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -66,7 +70,6 @@
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
-    "@google/generative-ai": "^0.21.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "postgres": "^3.4.7",
@@ -106,6 +109,7 @@
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
